--- a/foney/manifest.json
+++ b/foney/manifest.json
@@ -2,17 +2,17 @@
   "manifest_version": 2,
 
   "name": "Fone King",
-  "description": "Talk to RepairCMS from Vend",
+  "description": "Get jobs into Vend from RepairCMS",
   "version": "1.0",
 
   "background": {
     "scripts": ["background.js"]
   },
-  "omnibox": { "keyword" : "cms" },
+
+  "omnibox": { "keyword" : "fk" },
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "popup.html",
     "default_title": "Search RepairCMS"
   },
   "permissions": [
