--- a/foney/manifest.json
+++ b/foney/manifest.json
@@ -13,10 +13,11 @@
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_title": "Search RepairCMS"
+    "default_title": "Get RepairCMS Job"
   },
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "https://ajax.googleapis.com/",
+    "https://fonekingdemo.vendhq.com/"
   ]
 }
